authorization-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  labels:
    auth: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      auth: authentik
  template:
    metadata:
      labels:
        auth: authentik
    spec: 
      containers: 
        - name: authentik-server
          image: ghcr.io/goauthentik/server:latest  
          args: ["worker"] 
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:latest  
          args: ["server"]
          name: authentik-worker
      restartPolicy: Always
