authorization-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
spec:
  selector:
    auth-postgres: auth-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
