postgres-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
spec:
  podSelector:
    matchLabels:
      postgres: postgres 
  policyTypes:
    - Ingress 
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            api: api 
      ports:
        - protocol: TCP
          port: 5432 
  egress:
    - to:
      - podSelector:
          matchLabels:
            api: api 
      ports:
        - protocol: TCP
          port: 3000
