redis-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      redis: redis
  policyTypes:
    - Ingress  
    - Egress
  ingress:
    - from: 
      - podSelector:
          matchLabels:
            api: api
      ports:
        - protocol: TCP
          port: 6379 
    - from: 
      - podSelector:
          matchLabels:
            auth: authentik
      ports:
        - protocol: TCP
          port: 6379 
  egress:
    - to: 
      - podSelector:
          matchLabels:
            api: api
      ports:
        - protocol: TCP
          port: 3000
    - to: 
      - podSelector:
          matchLabels:
            auth: authentik
      ports:
        - protocol: TCP
          port: 9000
